--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,13 @@ body {
   display: inline-block;
   height: 200px;
   width: 200px;
-  border: 10px solid black;
+  border: 5px solid rgb(233, 202, 202);
   border-radius: 50%;
+  
+}
+.btn:hover{
+  height: 210px;
+  width: 210px;
 }
 
 .game-over {
